  
  * 2013-XX-XX
      # In lieu of the latest emergency release and the manual notification
        of the required upgrade, code has now been implemented to automate
        this in the future. Clients now make an explicit version check against
        the server, which will pop and informational dialogue and forced
        exit if the user's version is insufficient.
  
  * 2013-08-19
      # EMERGENCY RELEASE: The following security change by WMF developers:
        [http://lists.wikimedia.org/pipermail/wikitech-l/2013-August/071266.html]
        completely broke how login cookies are parsed in STiki (and most
        other applications, I have to imagine). This caused the edit/rollback
        tokens requested to be invalid under server checks, causing all
        edits to fail with a "badtoken" response. Every user will need
        to upgrade their STiki distribution.
      # Default revert comments were changed to note the quantity of edits
        reverted, with always correct plurality. This is done via the "#q#" 
        (quantity) and "#s#" placeholders (plurality switch) now interpreted
        by the "edit comment" panel.
  
  * 2013-05-23
      # Fixes to the AGF message dialogue (T#025). One can now abandon the
        revert action after the dialogue has been displayed, and checks
        ensure that the customized message will not be placed if the
        revert fails. Both edits (the revert and the message) commit 
        after the message has been authored. 
      # The AGF message dialogue has been updated with the modifications
        made by users at [[WP:STiki/Good-faith-revert_messages]]. Similarly,
        the number of user customizable messages has increased from 2 to 4.
      # The space bar is now disabled when the "classification panel" has 
        focus (most of the time). Previously, pressing spacebar would repeat 
        the previous classification action taken. However, this seemed to 